tests/paczka1/fuzzy1/38473460.err
Error in line 1: K0QUz1Aycls S709 14,2
Error in line 3: K0QUz1Aycls S724 70,7
Error in line 16: X6jjq5tJ S690 144,0
Error in line 23: X6jjq5tJ S709 0,2
Error in line 14: C8cuLjCL S709 98,1
